--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
 
         <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+        <script src="assets/script/script.js"></script>
     </body>
 
 
